deploy.sh updated and db removed

--- a/template.yaml
+++ b/template.yaml
@@ -16,9 +16,6 @@ Globals:
       Variables:
         S3_BUCKET: !Ref S3Bucket
         S3_KEY: txns.csv
-        DB_HOST: !GetAtt Database.Endpoint.Address
-        DB_PORT: !GetAtt Database.Endpoint.Port
-        DB_NAME: "${AWS::AccountId}-txns-database"
 
 Resources:
   TransactionSummaryEmailFunction:
@@ -28,11 +25,6 @@ Resources:
       Runtime: go1.x
       CodeUri: src/
       Events:
-        GetTransactions:
-          Type: Api
-          Properties:
-            Path: /transactions
-            Method: get
         ProcessEmail:
           Type: Api
           Properties:
@@ -45,61 +37,19 @@ Resources:
             IdentityName: '*'
         - SESEmailTemplateCrudPolicy: {}
         - S3ReadPolicy:
-            BucketName: !Sub "txn-summ-bucket-${AWS::AccountId}"
+            BucketName: !Sub "transactions-summary-bucket-${AWS::AccountId}"
+        - AWSSecretsManagerGetSecretValuePolicy:
+            SecretArn: '*'
 
   S3Bucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub "txn-summ-bucket-${AWS::AccountId}"
+      BucketName: !Sub "transactions-summary-bucket-${AWS::AccountId}"
 
-  Database:
-    Type: AWS::RDS::DBInstance
-    Properties:
-      AllocatedStorage: 20
-      DBInstanceClass: db.t2.micro
-      Engine: postgres
-      EngineVersion: '13.3'
-      MasterUsername: !Join ['', ['{{resolve:secretsmanager:', !Ref DBUsername, ':SecretString:username}}']]
-      MasterUserPassword: !Join ['', ['{{resolve:secretsmanager:', !Ref DBPassword, ':SecretString:password}}']]
-      DBSubnetGroupName: !Ref DBSubnetGroup
-      VPCSecurityGroups:
-        - !Ref DatabaseSecurityGroup
-
-  DatabaseSecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Enable PostgreSQL connection
-      VpcId: !Ref VpcId
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 5432
-          ToPort: 5432
-          CidrIp: 0.0.0.0/0
-
-  DBSubnetGroup:
-    Type: AWS::RDS::DBSubnetGroup
-    Properties:
-      DBSubnetGroupDescription: PostgreSQL DB Subnet Group
-      SubnetIds:
-        - !Ref PublicSubnet1
-        - !Ref PublicSubnet2
-
-  DBUsername:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Name: db-username
-      GenerateSecretString:
-        SecretStringTemplate: '{"username": "db_user"}'
-        GenerateStringKey: "password"
-        PasswordLength: 16
-        ExcludeCharacters: '"@/\'
-
-  DBPassword:
-    Type: AWS::SecretsManager::Secret
-    Properties:
-      Name: db-password
-      GenerateSecretString:
-        SecretStringTemplate: '{"password": "db_pass"}'
-        GenerateStringKey: "password"
-        PasswordLength: 16
-        ExcludeCharacters: '"@/\'
+Outputs:
+  EmailAPI:
+    Description: "API Gateway endpoint URL for Prod environment for First Function"
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/process-email"
+  S3UploadBucketName:
+    Description: "S3 bucket for application uploads"
+    Value: !Ref 'S3Bucket'  
